--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="menu_search">Suche</string>
     <string name="menu_map">Karte</string>
     <string name="menu_list">Liste</string>
+    <string name="current_position">Current position\"</string>
 </resources>
